# yatagarasu

./: .dockerignore  .env.example  .gitignore  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS_SUMMARY.md  COMPRESSION_DELIVERABLES.md  COMPRESSION_PLANNING_COMPLETE.md  COMPRESSION_PLAN_SUMMARY.md  COMPRESSION_QUICK_REFERENCE.md  Cargo.toml  DEVELOPMENT_PROGRESS.md  Dockerfile  Dockerfile.bench  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PHASE30.6_ANALYSIS.md  PHASE30_UNFINISHED_ANALYSIS.md  PHASE_28_11_FINDINGS.md  PINGORA_IMPLEMENTATION.md  PROGRESS_ANALYSIS.md  PR_REVIEW_22.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_v1.3.md  REQUEST_COALESCING_IMPLEMENTATION.md  ROADMAP.md  TASK_COMPLETION_SUMMARY.md  TEST_PLAN_V1.0.md  benchmark_results.txt  benchmark_results_final.txt  config.disk-pressure.yaml  config.docker.yaml  config.example.yaml  config.loadtest-opa.yaml  config.loadtest-redis.yaml  config.loadtest-tiered.yaml  config.multi-instance.yaml  config.redis-pressure.yaml  (+19 more)
.agent/rules/: bugfixing.md  planner.md  rustprjrules.md
.cargo/: audit.toml
.github/: ACTIONS_BILLING_FIX.md
.github/workflows/: benchmarks.yml  ci.yml  deploy-docs.yml  docs.yml  release.yml
.serena/: project.yml
benches/: backend_comparison.rs  cache_comparison.rs  disk_cache.rs  image_optimization.rs  jwt_validation.rs  request_processing.rs  routing.rs  s3_signature.rs
benchmark-results/: .gitignore  COMPARISON_SUMMARY.md
charts/yatagarasu/: Chart.yaml  README.md  values.yaml
config/benchmark/: config.benchmark-minio.yaml  config.benchmark-rustfs.yaml
config/loadtest/: config.k6test.yaml  config.loadtest-diskcache.yaml  config.loadtest-openfga.yaml  config.loadtest.yaml  config.memory-pressure.yaml  config.redis-ttl-test.yaml
coverage/: tarpaulin-report.html
deploy/: README.md  prometheus.yml
docker/: Dockerfile.test-linux  docker-compose.benchmark-minio.yml  docker-compose.benchmark-rustfs.yml  docker-compose.loadtest.yaml  docker-compose.multi-instance.yml  docker-compose.observability.yml  docker-compose.openfga.yml  docker-compose.test.yml  nginx.multi-instance.conf
docs/: BENCHMARKING.md  BENCHMARK_RESULTS_V1.2.md  CACHE_MANAGEMENT.md  CACHE_MANAGEMENT_ANSWER.md  CACHE_PREWARMING.md  COMPRESSION_ARCHITECTURE.md  COMPRESSION_BEST_PRACTICES.md  COMPRESSION_CONFIG_REFERENCE.md  COMPRESSION_FEATURE.md  COMPRESSION_FEATURE_PLAN.md  COMPRESSION_IMPLEMENTATION_PLAN.md  COMPRESSION_PERFORMANCE_GUIDE.md  CONFIG_RELOAD.md  CPU_SCALING.md  DEPLOYMENT.md  DOCKER.md  DOCKER_TESTING_GUIDE.md  GETTING_STARTED.md  GRACEFUL_SHUTDOWN.md  HA_BUCKET_REPLICATION.md  IMAGE_OPTIMIZATION.md  IMAGE_OPTIMIZATION_PLAN.md  IMAGE_OPTIMIZATION_SPEC.md  INDEX.md  JWT_AUTHENTICATION.md  MONOIO_RESEARCH_SUMMARY.md  OPA_POLICIES.md  OPENFGA.md  OPERATIONS.md  PARALLEL_ANSWER.md  PARALLEL_DOWNLOADS.md  PERFORMANCE.md  PERFORMANCE_RESULTS.md  PHASE_21_ROADMAP.md  PHASE_28_READY_TO_START.md  PHASE_28_REVISED_PLAN.md  PRD_HA_BUCKET_REPLICATION.md  PREWARMING_ANSWER.md  QUICK_REFERENCE_STREAMING.md  RANGE_ANSWER.md  (+9 more)
docs-site/: book.toml
docs-site/src/: README.md  SUMMARY.md  quickstart.md  troubleshooting.md
docs/archive/: IO_URING_FEASIBILITY.md  PHASE_28_11_FINDINGS.md  PHASE_28_FINAL_PLAN.md  PHASE_28_HYBRID_PLAN.md  PHASE_28_MONOIO_ANALYSIS.md  PINGORA_CACHE_ANALYSIS.md  REDIS_CACHE_SUMMARY.md
docs/spikes/: PHOTON_EVALUATION.md
k6/: backend-comparison.js  cache-hit-rate-validation.js  cache-size-scaling.js  concurrent.js  cpu-scaling.js  disk-cache-load.js  disk-cache-stress.js  disk-endurance.js  extreme-concurrency.js  hot-reload.js  large-file-streaming.js  memory-cache-load.js  memory-cache-stress.js  memory-endurance.js  memory-pressure.js  mixed-workload.js  openfga-load.js  phase17-performance.js  proxy-pipeline.js  redis-cache-load.js  redis-endurance.js  redis-stress.js  stability-test.js  stability.js  streaming.js  throughput.js  tiered-cache-load.js  tiered-endurance.js
k8s/loadtest/: hpa.yaml  kustomization.yaml  minio.yaml  namespace.yaml  pdb.yaml  tests.yaml  yatagarasu.yaml
kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
openfga/: model.json  tuples.json
policies/: loadtest-authz.rego
scripts/: bench-compare.sh  cache-scaling-test.sh  cpu-scaling-test.sh  generate-opa-tokens.sh  k8s-loadtest.sh  monitor-resources.sh  run-backend-benchmark.sh  setup-openfga-loadtest.sh  test-disk-cache-recovery.sh  test-graceful-shutdown.sh
scripts/load-testing/: README.md  setup-test-env.sh  start-minio.sh  test-basic.js  test-concurrent.js  test-jwt.js  test-streaming.js
src/: circuit_breaker.rs  constants.rs  error.rs  lib.rs  main.rs  rate_limit.rs  reload.rs  resources.rs  retry.rs  security.rs
src/admin/: mod.rs  prewarm.rs
src/audit/: mod.rs
src/auth/: jwks.rs  jwks_client.rs  mod.rs
src/cache/: config.rs  control.rs  entry.rs  error.rs  memory.rs  mod.rs  sendfile.rs  stats.rs  tiered.rs  traits.rs  warming.rs
src/compression/: algorithms.rs  bucket_config.rs  cache.rs  compress.rs  config.rs  error.rs  integration_tests.rs  metrics.rs  mod.rs  negotiation.rs  request.rs  response.rs
src/config/: audit.rs  authorization.rs  bucket.rs  circuit_breaker.rs  coalescing.rs  jwt.rs  mod.rs  rate_limit.rs  retry.rs  server.rs
src/image_optimizer/: config.rs  encoder.rs  error.rs  format.rs  metrics.rs  mod.rs  params.rs  processor.rs  security.rs
src/logging/: mod.rs
src/metrics/: mod.rs
src/observability/: config.rs  mod.rs  request_logging.rs  slow_query.rs  tracing.rs
src/opa/: mod.rs
src/openfga/: mod.rs
src/pipeline/: mod.rs
src/proxy/: cache_handler.rs  error_handler.rs  helpers.rs  init.rs  logging.rs  mod.rs  request_filter.rs  response_handler.rs  routing_auth.rs  security.rs  special_endpoints.rs  upstream.rs
src/replica_set/: mod.rs
src/router/: mod.rs
tests/: cache_integration_test.rs  integration_tests.rs  redis_cache_integration_test.rs  redis_cache_metrics_test.rs  redis_cache_retry_test.rs  unit_tests.rs
website/: Gemfile  _config.yml  index.md
(+218 files in other folders)
