[package]
name = "yatagarasu"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Yatagarasu Team"]
description = "High-performance S3 proxy built with Cloudflare's Pingora framework"
license = "MIT"
repository = "https://github.com/julianshen/yatagarasu"

[dependencies]
# Proxy Framework
pingora = "0.6"
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
async-trait = "0.1"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# AWS S3 SDK
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"

# JWT Authentication
jsonwebtoken = "9.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"

# HTTP
hyper = "1.0"
http = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.5"
futures = "0.3"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
urlencoding = "2.1"
signal-hook = "0.3"
libc = "0.2"
parking_lot = "0.12"

# Rate Limiting
governor = "0.6"
nonzero_ext = "0.3"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
# Testing
rstest = "0.18"
mockall = "0.12"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["localstack"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-test = "0.4"
log = "0.4"
env_logger = "0.11"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

# Benchmarks for performance testing
[[bench]]
name = "jwt_validation"
harness = false

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "s3_signature"
harness = false
